# ai-assistant

./: .gitignore  CLAUDE.md  Cargo.toml  IOS_ROADMAP.md  README.md  ROADMAP.md  SPEC.md  WORKERS_REFACTOR.md  config.toml
backend/: Cargo.toml
backend/src/: DEFAULT_MANUAL.md  assistant.rs  attachments.rs  claude.rs  config.rs  config_protocol.rs  curator.rs  devnote.rs  embedder.rs  indexer.rs  lib.rs  logcapture.rs  main.rs  manual.rs  memory.rs  preprocessor.rs  retrieval.rs  sanitizer.rs  scout.rs  self_knowledge.rs  vector_index.rs  ws.rs
backend/src/connectors/: gmail.rs  mod.rs  oauth.rs
backend/src/workers/: briefing.rs  gdrive.rs  gmail.rs  mod.rs  www.rs
backend/tests/: ws_roundtrip.rs
client/: Cargo.toml
client/src/: app.rs  geo.rs  icon.rs  main.rs  markdown.rs  net.rs  theme.rs
docs/: ARCHITECTURE.md  SECURITY.md  USER_GUIDE.md
ios/AIAssistant/AIAssistant/: AIAssistantApp.swift  ContentView.swift
ios/AIAssistant/AIAssistant.xcodeproj/: project.pbxproj
shared/: Cargo.toml
shared/src/: lib.rs
