[workspace]
resolver = "2"
members = ["shared", "backend", "client"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Joel Odom"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
