[package]
name = "backend"
edition.workspace = true
version.workspace = true

[[bin]]
name = "ai-assistant-backend"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
uuid.workspace = true
toml.workspace = true
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
walkdir = "2"
async-trait = "0.1"

[dev-dependencies]
tokio-tungstenite = "0.21"
tempfile = "3"
walkdir = "2"
