[package]
name = "backend"
edition.workspace = true
version.workspace = true

[[bin]]
name = "ai-assistant-backend"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
uuid.workspace = true
toml.workspace = true
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
walkdir = "2"
async-trait = "0.1"
base64 = "0.22"
pdf-extract = "0.7"
sha2.workspace = true
hnsw_rs = "0.3"
# fastembed is opt-in to keep the default build fast and dependency-light.
# Production deployments should enable it (`--features fastembed-real`) so
# Embedder uses real semantic vectors. Without the feature, MockEmbedder is
# used (deterministic hash-based vectors — fine for tests + architecture
# correctness, but not semantic).
fastembed = { version = "4", optional = true }

[features]
default = []
fastembed-real = ["dep:fastembed"]

[dev-dependencies]
tokio-tungstenite = "0.21"
tempfile = "3"
walkdir = "2"
