[package]
name = "backend"
edition.workspace = true
version.workspace = true

[[bin]]
name = "ai-assistant-backend"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = "0.2"
futures.workspace = true
uuid.workspace = true
toml.workspace = true
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
walkdir = "2"
async-trait = "0.1"
base64 = "0.22"
pdf-extract = "0.7"
sha2.workspace = true
hnsw_rs = "0.3"
# Connector machinery: OAuth browser flow + HTTP calls + browser launch.
oauth2 = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
webbrowser = "0.8"
# fastembed powers real semantic embeddings (bge-base-en-v1.5). It is ON by
# default (see [features]) so `cargo build`, `cargo build --release`, and
# `cargo run` all get real embeddings. It pulls in ONNX Runtime; for a light,
# dependency-free build (e.g. fast CI), use `--no-default-features`, which
# falls back to the deterministic MockEmbedder.
fastembed = { version = "4", optional = true }

[features]
default = ["fastembed-real"]
fastembed-real = ["dep:fastembed"]

[dev-dependencies]
tokio-tungstenite = "0.21"
tempfile = "3"
walkdir = "2"
