[package]
name = "client"
edition.workspace = true
version.workspace = true

[[bin]]
name = "ai-assistant-client"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
tokio-tungstenite = "0.21"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
ureq = { version = "2", features = ["json"] }
rfd = "0.14"
base64 = "0.22"
